--- a/Back-pfa-main/src/main/resources/application.properties
+++ b/Back-pfa-main/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# Show SQL queries in logs
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Log levels for your application
+logging.level.com.lachguer.pfabck=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
