--- a/Back-pfa-main/pom.xml
+++ b/Back-pfa-main/pom.xml
@@ -85,6 +85,12 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-aiplatform</artifactId>
+            <version>3.53.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
