--- a/Back-pfa-main/src/main/resources/application.properties
+++ b/Back-pfa-main/src/main/resources/application.properties
@@ -19,3 +19,7 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.com.lachguer.pfabck=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+# Configuration de l'API Gemini
+gemini.api.key=AIzaSyCibyZm5TkWK5-nTJVU3OJCxzio6KsX1q4 
+gemini.api.url=https://generativelanguage.googleapis.com/v1/models/gemini-1.5-pro:generateContent
