stockage de la generation du ai dans le BD

--- a/Back-pfa-main/src/main/resources/application.properties
+++ b/Back-pfa-main/src/main/resources/application.properties
@@ -21,5 +21,6 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
 
 # Configuration de l'API Gemini
-gemini.api.key=AIzaSyCibyZm5TkWK5-nTJVU3OJCxzio6KsX1q4 
-gemini.api.url=https://generativelanguage.googleapis.com/v1/models/gemini-1.5-pro:generateContent
+gemini.api.key=AIzaSyCibyZm5TkWK5-nTJVU3OJCxzio6KsX1q4
+
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
